Fix immutable set and list